--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -8,7 +8,7 @@
 .store-inventory
   Cookies for sale:
   %ul
-    - current_user.stored_cookies.group_by(&:fillings).each_pair do |fillings, cookies|
+    - current_user.cookies.group_by(&:fillings).each_pair do |fillings, cookies|
       %li
         = pluralize(cookies.count, "Cookie")
         with
